syntax = "proto3";

service MathHelper {
    rpc Summation(SummationInput) returns (SummationResult) {}
    rpc Factorial(FactorialInput) returns (FactorialResult) {}
}

message SummationInput {
    int64 first = 1;
    int64 last = 2;
}

message FactorialInput {
    int64 base = 1;
}

// returning the inputs with the result to create multiple response types, per the instructions
message SummationResult {
    int64 result = 1;
    int64 first = 2;
    int64 last = 3;
}

message FactorialResult {
    int64 result = 1;
    int64 base = 2;
}

